# highlowticker-algo-feed

./: README.md  pyproject.toml
examples/: notify.py  strategy.py
examples/barebones/: notify_simple.py  strategy_simple.py
schema/: algo-feed.schema.json
scripts/: smoke.py
src/hlt_algo_feed/: __init__.py  feed.py  models.py  sync.py
tests/: conftest.py  test_driver.py  test_examples_import.py  test_feed_framing.py  test_filtered.py  test_models_drift.py  test_notify_when.py  test_parse.py  test_sync_facade.py
