[project]
name = "highlowticker-algo-feed"
version = "0.1.0"
description = "Typed async client for the HighLowTicker algo feed (ws://127.0.0.1:7412)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["websockets>=12", "pydantic>=2"]

[project.urls]
Homepage = "https://github.com/highlowtick/highlowticker-algo-feed"
Source = "https://github.com/highlowtick/highlowticker-algo-feed"
Issues = "https://github.com/highlowtick/highlowticker-algo-feed/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "datamodel-code-generator>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hlt_algo_feed"]
